--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^6.4.8",
     "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.8.4",
+    "framer-motion": "^12.10.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
